--- a/demo.yml
+++ b/demo.yml
@@ -1,35 +1,215 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Cloudformation template to deploy an ECS cluster using CI/CD Pipeline
+Description: Cloudformation template to deploy a ECS cluster using CI/CD Pipeline
+Parameters:
+  VpcCIDR:
+    Type: String
+    Default: 18.0.0.0/16
+    Description: CIDR block for the VPC
+
+  PublicSubnet1CIDR:
+    Type: String
+    Default: 18.0.0.0/24
+    Description: CIDR block for the public subnet
+
+  PrivateSubnet1CIDR:
+    Type: String
+    Default: 18.0.1.0/24
+    Description: CIDR block for the private subnet
+
+  PublicSubnet2CIDR:
+    Type: String
+    Default: 18.0.2.0/24
+    Description: CIDR block for the public subnet
+
+  PrivateSubnet2CIDR:
+    Type: String
+    Default: 18.0.3.0/24
+    Description: CIDR block for the private subnet
+
+  GitHubOwner:
+    Description: Name of GitHub Owner
+    Type: String
+    Default: hammadkhaliq566
+
+  GitHubRepo:
+    Description: Name of GitHub Repo
+    Type: String
+    Default: AWS-ECS-Project
+
+  GitHubBranch:
+    Description: Name of GitHub Repo Branch
+    Type: String
+    Default: master
+
+  GitHubOAuthToken:
+    Type: String
+    NoEcho: true
+    Default: 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
+
+  BuckerName:
+    Description: S3 Bucket Name
+    Type: String
+    Default: ecs-deployment-devops-project
 
 Resources:
-  ECSTaskDefinition:
-    Type: AWS::ECS::TaskDefinition
+  PrivateVPC:
+    Type: AWS::EC2::VPC
     Properties:
-      ContainerDefinitions:
-        - Name: flaskapp
-          Image: 433337163311.dkr.ecr.us-east-1.amazonaws.com/ecsflaskapp:latest
-          PortMappings:
-            - ContainerPort: 80
-              HostPort: 80
-              Protocol: 'tcp'
-          Essential: true
-          LogConfiguration: 
-            LogDriver: awslogs
-            Options: 
-              awslogs-create-group: true
-              awslogs-group: "task-definition-family"
-              awslogs-region: us-east-1
-              awslogs-stream-prefix: ecs
-          Environment:
-            - Name: NAME
-              Value: World
-      Family: TaskDefinationECS-Service
-      ExecutionRoleArn: arn:aws:iam::433337163311:role/ecsTaskExecutionRole
-      NetworkMode: awsvpc
-      RequiresCompatibilities:
-        - FARGATE
-      Cpu: 0.5vCPU
-      Memory: 1GB
-      RuntimePlatform:
-        cpuArchitecture: X86_64
-        operatingSystemFamily: LINUX
+      CidrBlock: !Ref VpcCIDR
+      Tags:
+      - Key: stack
+        Value: production
+
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: InternetGateway
+
+  VPCGatewayAttachment:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref PrivateVPC
+      InternetGatewayId: !Ref InternetGateway
+
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref PrivateVPC
+      CidrBlock: !Ref PublicSubnet1CIDR
+      AvailabilityZone: "us-east-1a"
+      Tags:
+      - Key: Name
+        Value: PublicSubnet-az-1
+
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref PrivateVPC
+      CidrBlock: !Ref PrivateSubnet1CIDR
+      AvailabilityZone: "us-east-1a"
+      Tags:
+      - Key: Name
+        Value: PrivateSubnet-az-1
+
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref PrivateVPC
+      CidrBlock: !Ref PublicSubnet2CIDR
+      AvailabilityZone: "us-east-1b"
+      Tags:
+      - Key: Name
+        Value: PublicSubnet-az-2
+
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref PrivateVPC
+      CidrBlock: !Ref PrivateSubnet2CIDR
+      AvailabilityZone: "us-east-1b"
+      Tags:
+      - Key: Name
+        Value: PrivateSubnet-az-2
+
+  PublicRouteTable1:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref PrivateVPC
+
+  PublicRouteTable2:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref PrivateVPC
+
+  PublicRoute1:
+    Type: AWS::EC2::Route
+    DependsOn: VPCGatewayAttachment
+    Properties:
+      RouteTableId: !Ref PublicRouteTable1
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
+
+  PublicRoute2:
+    Type: AWS::EC2::Route
+    DependsOn: VPCGatewayAttachment
+    Properties:
+      RouteTableId: !Ref PublicRouteTable2
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
+
+  PublicSubnet1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet1
+      RouteTableId: !Ref PublicRouteTable1
+
+  PublicSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet2
+      RouteTableId: !Ref PublicRouteTable2
+
+  NATGatewayEIP1:
+    Type: AWS::EC2::EIP
+
+  NATGateway1:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt NATGatewayEIP1.AllocationId
+      SubnetId: !Ref PublicSubnet1
+
+  NATGatewayEIP2:
+    Type: AWS::EC2::EIP
+
+  NATGateway2:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt NATGatewayEIP2.AllocationId
+      SubnetId: !Ref PublicSubnet2
+
+  PrivateRouteTable1:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref PrivateVPC
+      Tags:
+      - Key: Name
+        Value: PrivateRouteTable1
+
+  PrivateRouteTable2:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref PrivateVPC
+      Tags:
+      - Key: Name
+        Value: PrivateRouteTable2
+  
+  PrivateRoute1:
+    Type: AWS::EC2::Route
+    DependsOn: NATGateway1
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable1
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
+
+  PrivateRoute2:
+    Type: AWS::EC2::Route
+    DependsOn: NATGateway2
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable2
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
+  
+  PrivateSubnet1Association:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable1
+      SubnetId: !Ref PrivateSubnet1
+
+  PrivateSubnet2Association:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable2
+      SubnetId: !Ref PrivateSubnet2
