--- a/testfile.yml
+++ b/testfile.yml
@@ -218,7 +218,7 @@ Parameters:
     Type: AWS::CodeDeploy::Application
     Properties:
       ApplicationName: ECSDeploymentApp
-      ComputePlatform: Server
+      ComputePlatform: ECS
 
   CodeDeployDeploymentGroup:
     Type: AWS::CodeDeploy::DeploymentGroup
@@ -240,10 +240,12 @@ Parameters:
           TimeBasedCanary:
             CanaryPercentage: 10
             CanariedTrafficPercent: 10
-      LoadBalancerInfo:
-        TargetGroupInfoList:
-          - Name: TargetGroup 
-
+    LoadBalancerInfo:
+      TargetGroupInfoList:
+        - Name: BlueTargetGroup
+          TargetGroup: !Ref BlueTargetGroup
+        - Name: GreenTargetGroup
+          TargetGroup: !Ref GreenTargetGroup
 
       - Name: Deploy
         Actions:
@@ -264,13 +266,6 @@ Parameters:
       TaskDefinition: arn:aws:ecs:us-east-1:433337163311:task-definition/ECSTaskDefination:1
 
 
-
-  MySecret:
-    Type: AWS::SecretsManager::Secret
-    Properties:
-      Name: MyPrivateRegistryCredentials
-      Description: Secret for Private Registry Authentication
-      SecretString: '{"username": "hammad", "password": "HammadKhaliq@0064"}'
 
   ECSTaskExecutionRole:
       Type: AWS::IAM::Role
