--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -45,12 +45,17 @@ Parameters:
   GitHubOAuthToken:
     Type: String
     NoEcho: true
-    Default: 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
+    Default: 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
 
   BuckerName:
     Description: S3 Bucket Name
     Type: String
     Default: ecs-deployment-devops-project
+
+  NotificationEmail:
+    Type: String
+    Description: Email address where notifications will be sent
+    Default: ch.hammad.khaliq@gmail.com
 
 Resources:
   PrivateVPC:
@@ -237,6 +242,45 @@ Resources:
           Logging: DEFAULT
       ServiceConnectDefaults:
         Namespace: ECSClusterNamespace
+
+  ECSService:
+    Type: AWS::ECS::Service
+    Properties:
+      Cluster: ECS-Cluster-FlaskApp
+      TaskDefinition: arn:aws:ecs:us-east-1:433337163311:task-definition/TaskDefinatioECS-Service:3
+      LaunchType: FARGATE
+      ServiceName: ECS-Service
+      SchedulingStrategy: REPLICA
+      DesiredCount: 2
+      LoadBalancers:
+      - ContainerName: flaskapp
+        ContainerPort: 80
+        TargetGroupArn:
+          Ref: TargetGroup
+      HealthCheckGracePeriodSeconds: '10'
+      NetworkConfiguration:
+        AwsvpcConfiguration:
+          AssignPublicIp: ENABLED
+          SecurityGroups:
+          - Ref: SecurityGroup
+          Subnets:
+            - !Ref PrivateSubnet1
+            - !Ref PrivateSubnet2
+      PlatformVersion: LATEST
+      DeploymentConfiguration:
+        MaximumPercent: 200
+        MinimumHealthyPercent: 100
+        DeploymentCircuitBreaker:
+          Enable: true
+          Rollback: true
+      DeploymentController:
+        Type: ECS
+      ServiceConnectConfiguration:
+        Enabled: false
+      Tags: []
+      EnableECSManagedTags: true
+    DependsOn:
+    - Listener
     
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -275,18 +319,6 @@ Resources:
       TargetType: ip
       HealthCheckProtocol: HTTP
       VpcId: !Ref PrivateVPC
-
-  TargetGroup2:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      HealthCheckPath: "/"
-      Name: ECS-TG-2
-      Port: 80
-      Protocol: HTTP
-      TargetType: ip
-      HealthCheckProtocol: HTTP
-      VpcId: !Ref PrivateVPC
-
 
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
@@ -405,6 +437,13 @@ Resources:
             - Effect: Allow
               Action: 'codebuild:*'
               Resource: '*'
+            - Effect: Allow
+              Action:
+                - ecs:DescribeServices
+                - ecs:UpdateService
+              Resource: "*"
+      ManagedPolicyArns:
+        - 'arn:aws:iam::aws:policy/AWSCodeBuildAdminAccess'
 
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
@@ -422,66 +461,6 @@ Resources:
         ComputeType: BUILD_GENERAL1_SMALL
         Image: aws/codebuild/amazonlinux2-x86_64-standard:4.0
         PrivilegedMode: true
-
-  CodeDeployServiceRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - codedeploy.amazonaws.com
-            Action:
-              - sts:AssumeRole
-      Path: /
-      Policies:
-        - PolicyName: CodeDeployServiceRolePolicy
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - autoscaling:CompleteLifecycleAction
-                  - autoscaling:DeleteLifecycleHook
-                  - autoscaling:DescribeAutoScalingGroups
-                  - autoscaling:DescribeLifecycleHooks
-                  - autoscaling:PutLifecycleHook
-                  - autoscaling:RecordLifecycleActionHeartbeat
-                  - ec2:DescribeInstances
-                  - ec2:DescribeTags
-                  - ec2:TerminateInstances
-                Resource: '*'
-
-  CodeDeployServiceRoleAttachment:
-    Type: AWS::IAM::PolicyAttachment
-    Properties:
-      PolicyArn: !Ref CodeDeployServiceRole
-      Roles:
-        - !Ref CodeDeployServiceRole
-
-  CodeDeployApplication:
-    Type: AWS::CodeDeploy::Application
-    Properties:
-      ApplicationName: CodeDeployApplication
-      ComputePlatform: ECS
-
-  CodeDeployDeploymentGroup:
-    Type: AWS::CodeDeploy::DeploymentGroup
-    Properties:
-      ApplicationName: CodeDeployApplication
-      DeploymentGroupName: ECSDeploymentGroup
-      DeploymentConfigName: CodeDeployDefault.ECSDeploymentConfig
-      ServiceRoleArn: !GetAtt CodeDeployServiceRole.Arn
-      DeploymentStyle:
-        DeploymentType: BLUE_GREEN
-        DeploymentOption: WITH_TRAFFIC_CONTROL
-      LoadBalancerInfo:
-        TargetGroupInfoList:
-          - Name: TargetGroup
-          - Name: TargetGroup2
-      DeploymentConfigName: CodeDeployDefault.ECSAllAtOnce
 
   GithubWebhook:
     Type: AWS::CodePipeline::Webhook
@@ -540,20 +519,24 @@ Resources:
             OutputArtifacts:
               - Name: BuildOutput
             RunOrder: 2
-      - Name: Deploy
-        Actions:
-          - Name: DeployBlueAction
-            ActionTypeId:
-              Category: Deploy
-              Owner: AWS
-              Version: '1'
-              Provider: CodeDeployToECS
-            InputArtifacts:
-              - Name: BuildOutput
-            Configuration:
-              AppSpecTemplateArtifactName: appspec.yml
-              ApplicationName: !Ref CodeDeployApplication
-              DeploymentGroupName: !Ref CodeDeployDeploymentGroup
-              TaskDefinitionTemplateArtifactName: arn:aws:ecs:us-east-1:433337163311:task-definition/TaskDefinatioECS-Service:2
-              DeploymentConfigName: CodeDeployDefault.ECSBlueGreen
-            RunOrder: 3
+
+  SnsTopicCodeBuild:
+    Type: AWS::SNS::Topic
+    Properties:
+      TopicName: SnsTopicCodeBuild
+      Subscription:
+        - Protocol: email
+          Endpoint: ch.hammad.khaliq@gmail.com
+
+  CodeBuildProjectNotificationRule:
+    Type: AWS::CodeStarNotifications::NotificationRule
+    Properties:
+      Name: CodeBuildProjectNotificationRule
+      DetailType: FULL
+      EventTypeIds:
+        - codebuild-project-build-state-failed
+        - codebuild-project-build-state-succeeded
+      Resource: 'arn:aws:codebuild:us-east-1:433337163311:project/CodeBuildProject'
+      Targets:
+        - TargetAddress: !Ref SnsTopicCodeBuild
+          TargetType: SNS
